[B]1.0.3:[/B]
- oprava listovani epizod
[B]1.0.2:[/B]
- migrace na stream.resolver 1.0.3
[B]1.0.1:[/B]
- přidána podpora koukni.cz a načítání titulků z koukni.cz
[B]1.0.0:[/B]
Initial version